# Copyright (c) 2022-2023 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")

ohos_shared_library("fingerprintauthservice") {
  sources = [
    "src/fingerprint_auth_driver_hdi.cpp",
    "src/fingerprint_auth_executor_callback_hdi.cpp",
    "src/fingerprint_auth_executor_hdi.cpp",
    "src/fingerprint_auth_interface_adapter.cpp",
    "src/fingerprint_auth_service.cpp",
  ]
  include_dirs = [
    "inc",
    "../common/inc",
    "../common/logs",
    "../common/utils",
  ]

  external_deps = [
    "c_utils:utils",
    "drivers_interface_fingerprint_auth:libfingerprint_auth_proxy_1.0",
    "hiviewdfx_hilog_native:libhilog",
    "ipc:ipc_single",
    "safwk:system_ability_fwk",
    "samgr:samgr_proxy",
    "user_auth_framework:userauth_executors",
  ]
  remove_configs = [ "//build/config/compiler:no_exceptions" ]

  subsystem_name = "useriam"
  part_name = "fingerprint_auth"
}
