# Copyright (c) 2022-2023 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/test.gni")

ohos_unittest("FingerprintAuthServiceUnitTest") {
  sanitize = {
    integer_overflow = true
    ubsan = true
    boundary_sanitize = true
    cfi = true
    cfi_cross_dso = true
    debug = false
    blocklist = "../../cfi_blocklist.txt"
  }
  branch_protector_ret = "pac_ret"
  module_out_path = "useriam/fingerprint_auth"

  sources = [
    "fingerprint_auth_all_in_one_executor_hdi_unit_test.cpp",
    "fingerprint_auth_driver_hdi_unit_test.cpp",
    "fingerprint_auth_executor_callback_hdi_unit_test.cpp",
    "sa_command_manager_unit_test.cpp",
    "screen_state_monitor_unit_test.cpp",
  ]

  include_dirs = [ "mock" ]

  deps = [
    "../../services:fingerprintauthservice_source_set",
    "../../services_ex:fingerprintauthservice_ex_source_set",
    "//third_party/googletest:gmock_main",
    "//third_party/googletest:gtest_main",
  ]

  external_deps = [
    "drivers_interface_fingerprint_auth:libfingerprint_auth_proxy_2.0",
    "graphic_2d:librender_service_client",
    "hilog:libhilog",
    "user_auth_framework:userauth_executors",
    "window_manager:libdm",
  ]

  remove_configs = [ "//build/config/compiler:no_exceptions" ]

  subsystem_name = "useriam"
  part_name = "fingerprint_auth"
}

ohos_unittest("FingerprintSensorIlluminationTest") {
  sanitize = {
    integer_overflow = true
    ubsan = true
    boundary_sanitize = true
    cfi = true
    cfi_cross_dso = true
    debug = false
    blocklist = "../../cfi_blocklist.txt"
  }
  branch_protector_ret = "pac_ret"
  module_out_path = "useriam/fingerprint_auth"

  sources = [ "fingerprint_auth_sensor_illumination_test.cpp" ]

  deps = [
    "../../services:fingerprintauthservice_source_set",
    "//third_party/googletest:gtest_main",
  ]

  external_deps = [
    "display_manager:displaymgr",
    "drivers_interface_fingerprint_auth:libfingerprint_auth_proxy_2.0",
    "graphic_2d:librender_service_client",
    "hilog:libhilog",
    "user_auth_framework:userauth_executors",
    "window_manager:libdm",
  ]

  remove_configs = [ "//build/config/compiler:no_exceptions" ]

  subsystem_name = "useriam"
  part_name = "fingerprint_auth"
}

group("fingerprintauth_unittest") {
  testonly = true

  deps = [
    ":FingerprintAuthServiceUnitTest",
    ":FingerprintSensorIlluminationTest",
  ]
}
