# Copyright (c) 2022-2023 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/config/features.gni")
import("//build/test.gni")

ohos_fuzztest("FingerprintAuthExecutorHdiFuzzTest") {
  module_out_path = "useriam/fingerprint_auth"
  fuzz_config_file = "../fingerprintauthexecutorhdi_fuzzer"

  cflags = [
    "-g",
    "-O0",
    "-Wno-unused-variable",
    "-fno-omit-frame-pointer",
  ]
  include_dirs = [
    "../../../common/inc",
    "../../../common/logs",
    "../../../common/utils",
    "../../../services/inc",
    "../iamfuzz",
  ]

  sources = [
    "../../../services/src/fingerprint_auth_driver_hdi.cpp",
    "../../../services/src/fingerprint_auth_executor_callback_hdi.cpp",
    "../../../services/src/fingerprint_auth_executor_hdi.cpp",
    "../../../services/src/fingerprint_auth_interface_adapter.cpp",
    "../../../services/src/fingerprint_auth_service.cpp",
    "../iamfuzz/iam_fuzz_test.cpp",
    "fingerprint_auth_executor_hdi_fuzzer.cpp",
  ]

  external_deps = [
    "c_utils:utils",
    "drivers_interface_fingerprint_auth:libfingerprint_auth_proxy_1.0",
    "hilog_native:libhilog",
    "hiviewdfx_hilog_native:libhilog",
    "ipc:ipc_single",
    "safwk:system_ability_fwk",
    "samgr:samgr_proxy",
    "user_auth_framework:userauth_executors",
  ]

  remove_configs = [ "//build/config/compiler:no_exceptions" ]

  subsystem_name = "useriam"
  part_name = "fingerprint_auth"
}
